--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+a, li{
+  text-decoration: none;
+  list-style: none;
+}
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
@@ -21,6 +26,18 @@ nav ul {
   list-style: none;
   display: flex;
   gap: 20px;
+}
+
+nav ul li{
+  background-color: transparent;
+  border: none;
+  border-radius: 20px;
+  width: 80px;
+  height: 20px;
+  text-align: center;
+}
+nav ul li:hover{
+  background-color: #f60;
 }
 
 nav a {
@@ -49,6 +66,7 @@ nav a {
   padding: 10px 20px;
   color: #fff;
   text-decoration: none;
+  border-radius: 20px;
 }
 
 .destaques {
@@ -76,6 +94,11 @@ nav a {
   max-height: 490px;
   border-radius: 10px;
 }
+
+.produto a:hover{
+  color: #f60;
+}
+
 
 footer {
   background-color: #000;
