--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-a, li{
+a, ul{
   text-decoration: none;
   list-style: none;
 }
@@ -23,7 +23,6 @@ header .logo img {
 }
 
 nav ul {
-  list-style: none;
   display: flex;
   gap: 20px;
 }
@@ -42,7 +41,6 @@ nav ul li:hover{
 
 nav a {
   color: #fff;
-  text-decoration: none;
 }
 
 .carousel {
@@ -82,17 +80,19 @@ nav a {
 }
 
 .produto {
-  border: 1px solid #ddd;
   padding: 10px;
   text-align: center;
-  background-color: #f9f9f9;
+  background-color: #dad5d5
+  ;
   border-radius: 10px;
+  border: 1px solid #000;
 }
 
 .produto img {
-  max-width: 380px;
-  max-height: 490px;
+  width: 380px;
+  height: 490px;
   border-radius: 10px;
+  border: 1px solid #f60;
 }
 
 .produto a:hover{
