--- a/assets/css/tenis.css
+++ b/assets/css/tenis.css
@@ -1,49 +1,3 @@
-a, ul{
-  text-decoration: none;
-  list-style: none;
-}
-
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #f4f4f4;
-}
-
-header {
-  background-color: #000;
-  color: #fff;
-  padding: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-header .logo img {
-  width: 100px;
-}
-
-nav ul {
-  display: flex;
-  gap: 20px;
-}
-
-nav ul li{
-  background-color: transparent;
-  border: none;
-  border-radius: 20px;
-  width: 80px;
-  height: 20px;
-  text-align: center;
-}
-nav ul li:hover{
-  background-color: #f60;
-}
-
-nav a {
-  color: #fff;
-  text-decoration: none;
-}
 
 .produtos {
   padding: 20px;
@@ -56,13 +10,13 @@ nav a {
   color: #333;
 }
 
-.grid-produtos {
+.grid-tenis {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
+  grid-template-columns: repeat(4, 400px);
+  gap: 98px;
 }
 
-.produto {
+.tenis {
   padding: 10px;
   text-align: center;
   background-color: #dad5d5;
@@ -70,19 +24,19 @@ nav a {
   border: 1px solid #000;
 }
 
-.produto img {
+.tenis img {
   width: 380px;
   height: 490px;
   border-radius: 10px;
 }
 
-.produto h3 {
+.tenis h3 {
   font-size: 18px;
   color: #333;
   margin-bottom: 10px;
 }
 
-.produto p {
+.tenis p {
   font-size: 16px;
   color: #e44d26;
   margin-bottom: 15px;
@@ -99,16 +53,3 @@ nav a {
 .saiba-mais:hover {
   background-color: #e44d26;
 }
-
-footer {
-  background-color: #000;
-  color: #fff;
-  text-align: center;
-  padding: 20px;
-}
-
-footer a {
-  color: #f60;
-}
-
-  
